# fleet-agent

./: Cargo.toml  README.md  agent-cli.db  collector.db
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-service/: Cargo.toml
crates/agent-service/src/: main.rs
crates/collector/: Cargo.toml
crates/collector/src/: main.rs
crates/fleet-core/: Cargo.toml
crates/fleet-core/src/: agent.rs  collector_client.rs  config.rs  error.rs  lib.rs  metrics.rs  store.rs
deploy/: fleet-agent.service
