[package]
name = "fleet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
thiserror = "1"
surge-ping = "0.8"
